# PedagogySquare-Downloader-rs

./: .gitignore  Cargo.toml  README.md  config.json
.github/workflows/: ci.yml
src/: main.rs
