[package]
name = "pedagogy-square-downloader-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.12", features = ["json", "stream"] }
md5 = "0.7.0"
tokio = { version = "1.43.0", features =[ "full"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
tqdm = "0.7.0"